ajax : 종합실습 일정관리프로그램 - 할일 수정등록하기

--- a/3.ajax/TodoList/assets/styles/app.css
+++ b/3.ajax/TodoList/assets/styles/app.css
@@ -128,6 +128,11 @@ section.todo-template .content .todo-list .todo-list-item .modify {
     color: green;
     margin-right: 10px;    
 }
+
+section.todo-template .content .todo-list .todo-list-item .red  {    
+    color: red;
+    margin-right: 10px;    
+}
 section.todo-template .content .todo-list .todo-list-item .remove {  
     color: red;    
 }
